# LLVM_Study_Notes

./: .gitignore  .gitmodules  README.md  build.sh  git.sh
docx/: cpu0_for_llvm.md  llvm项目结构笔记.md  湖南大学编译原理笔记.md
docx/BPF/: BPF.md  test.md
docx/LLVM_Code_Generation/: LLVM_Code_Generation.md
docx/cpu0/: cpu0.md  llvm-hou-duan-shi-jian-bi-ji-1.md
docx/llvm-pass/: 01-Sabotage.md
docx/mlir_python_c/: mlir.md
docx/mlir_toy/: ch1.md  toy-mlir.md  toy.md
scripts/: build.sh
src/BPF/: BPF.td  BPFCallingConv.td  BPFInstrFormats.td
src/Kaleidoscope/: Makefile  lexer.cc  main  main.cc  tt
src/Kaleidoscope/ast/: ast.cc
src/Kaleidoscope/lexer/: lexer.cc  lexer.h
src/Kaleidoscope/logger/: logger.cc  logger.h
src/Kaleidoscope/parser/: parser.cc  parser.h
src/LLVM_Code_Generation/ch1/: helloworlf_err.c  pow.c  pow.s
src/ch_1/: output.ll  testfile.ll
src/ch_1/output/: output2.ll
src/ch_1/testfile/: testfile.ll  testfile.sh
src/cpu0_llvm/: CMakeLists.txt  cpu0.sh
src/cpu0_llvm20/cmake/: config-ix.cmake
src/llvm-chibicc/: Makefile  build.sh  chibicc.h  llvm_ir_gen.cpp
src/llvm-chibicc/include/: llvm_data.h
src/llvm-chibicc/scripts/: run.sh
src/llvm-chibicc/test/: function_llvm.c  hello.c
src/llvm-chibicc/test2/: tets
src/llvm-ir/: README.md
src/llvm-ir/4.GlobalVariable/: Hello_GlobalVariables.cc
src/llvm-ir/5.Return/: Hello_Return.cc  Hello_Return.sh
src/llvm_first_lang/: my-lang.cc
src/toy-mlir/: CMakeLists.txt  toyc.cpp
src/toy-mlir/include/: AST.h  CMakeLists.txt  Lexer.h  Parser.h
src/toy-mlir/paser/: AST.cpp  CMakeLists.txt  Parser.cpp
src/toy-mlir/scripts/: build.sh  import.sh  standalone-build.sh  work.sh
src/toy-mlir/test/: CMakeLists.txt  toy.toy  toy_func.toy
src/toy-mlir/test/ch1/: CMakeLists.txt  test_Lexer.cpp  tt  user_defined_function.toy
src/toy-mlir/toy/: Parser.h
src/toy_llvm/: CMakeLists.txt  toy.sh  toy_build.sh  toy_test.sh
(+98 files in other folders)
